--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "python": "^0.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
